--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,7 +4,7 @@ services:
   frontend:
     image: rmd09/canteen-frontend:latest
     environment:
-      - NEXT_PUBLIC_API_URL=https://canteen1502.ru/api
+      - NEXT_PUBLIC_BASE_URL=/api
     networks:
       - app-network
     ports:
