--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   backend:
     build: ./backend
     environment:
-      - FLASK_APP=backend.app
+      - FLASK_APP=app.py
       - FLASK_ENV=development
     ports:
       - "5000:5000"
