--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "next": "16.1.4",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@tailwindcss/postcss": "^4",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@eslint/js": "^9.37.0",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
@@ -28,8 +30,8 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.0.0",
     "prettier": "^3.6.2",
-    "typescript-eslint": "^8.46.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.46.1"
   }
 }
