--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,9 +56,4 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd /root  
-            ./pull_repo.sh
-            cd /root/canteen
-            docker compose -f docker-compose.prod.yml pull
-            docker compose down -f
-            docker compose -f docker-compose.prod.yml up -d
+            /root/scripts/run_docker_compose.sh
