Frontend/вёрстка основных элементов фронт (#22)
* добавлен docs.md, изменен ответ ручки login

* добавлен запрос user

* изменена функция получения информации о пользователе (user)

* добавлена модель блюда (Dish)

* добавлена ручка добавления блюда

* пофикшена ошибка импорта, мешающая запустить приложение

* Backend/базовые модели их связи функции работы с ними (#5)

* изменена функция получения информации о пользователе (user)

* добавлена модель блюда (Dish)

* добавлена ручка добавления блюда

* пофикшена ошибка импорта, мешающая запустить приложение

* Frontend/структура и конфигурация (#6)

* Создание endpoints.ts

+ тестирование. Работает)

* Авторизация пользователя с сохранением jwt

* Изменения параметров запуска для dev и prod

* Загрузка файла .env для фронтенда

Всё равно там ничего секретного нет

* Изменение структуры

* Базовая форма авторизации

* Вынесение формы авторизации в отдельный компонент

* Изменение формы на пароль

* Конфигурация docker compose

* Перенос файла .flaskenv в  backend/

* убраны отладочные действия

* Вёрстка Header

* добавлен блок обработчиков блюд: crud, пофикшены небольшие ошибки, связанные с созданием бд

* путь запроса к ручке изменен на более понятный, убран лишний параметр

* вёрстка основной страницы

* Вёрстка popup для авторизации

* Update AuthForm.tsx

* Create canteen.db

* Frontend/вёрстка основных элементов фронт (#12)

* Вёрстка Header

* вёрстка основной страницы

* Вёрстка popup для авторизации

* Update AuthForm.tsx

* Create canteen.db

* Откат pull request

Блять я всё сломал!!!!

* Откат

* Revert "Update AuthForm.tsx"

This reverts commit d73d5822912b8ab3fe24c9ca4654b17b79ced938.

* Сука это пиздец

* Revert "Frontend/вёрстка основных элементов фронт (#12)"

This reverts commit 3a0b280e02b3c567b46db78c1794bebe015bf7d4.

* Revert "Сука это пиздец"

This reverts commit 27f582273fae2768ec036da77272d335e3e2d803.

* Revert "Merge branch 'dev' of https://github.com/At-Palych-1502/canteen into dev"

This re

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,8 @@ version: '3.8'
 services:
   frontend:
     image: rmd09/canteen-frontend:latest
+    environment:
+      - NEXT_PUBLIC_BASE_URL=/api
     networks:
       - app-network
     ports:
@@ -13,7 +15,7 @@ services:
   backend:
     image: rmd09/canteen-backend:latest
     volumes:
-      - sqlite-data:/app/db  # монтируем том в /app/instance внутри контейнера
+      - sqlite-data:/app/instance  # монтируем том в /app/instance внутри контейнера
     environment:
       - FLASK_APP=backend.app
       - FLASK_ENV=development
