--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-# NEXT_PUBLIC_BASE_URL=http://localhost:5000
-NEXT_PUBLIC_BASE_URL=https://canteen1502.ru/api
+NEXT_PUBLIC_BASE_URL=http://localhost:5000/api
+# NEXT_PUBLIC_BASE_URL=https://canteen1502.ru/api
